--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ tensorboard>=2.4.1
 pandas>=1.1.4
 seaborn>=0.11.0
 
+# Interface -----------------------------------
+gradio>=4.36.1
+
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
 # onnx>=1.9.0  # ONNX export
@@ -35,5 +38,3 @@ seaborn>=0.11.0
 # pycocotools>=2.0  # COCO mAP
 # roboflow
 thop  # FLOPs computation
-
-gradio
